--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "mongoose": "8.0.0",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.5",
