:memo: Commenting env examples

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,13 @@
 MONGO=
+# Database credentials
 AUTH_SECRET=
+# To create auth secret use $openssl rand -base64 32
 AUTH_URL=
+# http://localhost:3000/api/auth
 GITHUB_ID=
 GITHUB_SECRET=
+# Create a project on github
 API_KEY=
+# You can use the same method as auth secret
 BASE_URL=
+# http://localhost:3000
